# snap_tauri

./: LICENSE  README.md  output.webm  package.json  pnpm-lock.yaml  vite.config.ts  vite.config.ts.timestamp-1719785937305-db5d2143428ed.mjs
.github/: FUNDING.yml
src/: App.vue  components.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: convert.rs  main.rs
src/layouts/: default.vue
src/pages/: index.vue
