[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.6.5", features = [] }
env-libvpx-sys = { version = "5", features = ["generate"] }
xcap = "0.0.10"
webm = { git = "https://github.com/21pages/rust-webm" }
vpx-encode = {version="0.6.2", features= ["vp9"] }
image = {version = "0.25.1"}
log = "^0.4.20"
lazy_static = "1.5.0"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
